--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
 
 :root {
     --color-Dark: #363f5f;
+    --green: #49AA26
+    --light-green: #3dd705 
+    --red: #e92929
+}
+
+html {
+    font-size: 93.75%;
 }
 
 body {
@@ -36,6 +43,21 @@ header h1 {
     margin: auto;
 }
 
+a {
+    color: var(--color-green);
+    text-decoration: none;
+
+}
+
+a:hover {
+    color: var(--light-green);
+}
+
+.button.new {
+    display: inline-block;
+    margin-bottom: .8rem;
+}
+
 .balance {
     color: var(--color-Dark);
     margin-top: -8rem;
@@ -55,6 +77,9 @@ header h1 {
 .card h3 {
     font-weight: normal;
     font-size: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .card p {
@@ -64,16 +89,23 @@ header h1 {
 }
 
 .card.total {
-    background: #49AA26;
+    background: var(--color-green);
     color: white;
+}
+
+.transaction {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
 }
 
 .dataTable {
     width: 100%;
     border-spacing: 0 0.5rem;
+    color: #969Cb3;
 }
 
-table th{
+table th {
     background: white;
     opacity: 0.6;
     color: #969Cb3;
@@ -81,35 +113,157 @@ table th{
     padding: 1rem 2rem;
     text-align: left;
 }
+
 table thead tr th:first-child,
-table tbody tr td:first-child{
+table tbody tr td:first-child {
     border-radius: 0.25rem 0 0 0.25rem;
 }
 
-table td{
+table thead tr th:last-child,
+table tbody tr td:last-child {
+    border-radius: 0 0.25rem 0.25rem 0;
+}
+
+table td {
     background: white;
     padding: 1rem 2rem;
 }
 
-table tbody tr:hover{
+table tbody tr:hover {
     opacity: 0.7;
 }
 
-td.description{
+td.description {
     color: var(--color-Dark);
 }
 
-td.income{
+td.income {
     color: #12a454;
 }
 
-td.expense{
+td.expense {
     color: #e92929;
 }
+
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    background: #F2F0f5;
+    padding: 2.4rem;
+    width: 90%;
+    max-width: 500px;
+}
+
+.form {
+    max-width: 500px;
+}
+
+.form h2 {
+    margin-top: 0;
+}
+
+input {
+    border: none;
+    border-radius: 0.2rem;
+    padding: 0.8rem;
+    width: 100%;
+}
+
+.input-group {
+    margin-top: 0.8rem;
+}
+
+.input-group small {
+    opacity: 0.4;
+}
+
+.input-group.action {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-group.action .button .input-group.actions .buttons {
+    width: 48%;
+
+}
+
+.button{
+    width: 100%;
+    height: 50px;
+    border: none;
+    color: white;
+    background: var(--color-green) ;
+    padding: 0;
+    border-radius: 0.25rem;
+    cursor: pointer;
+}
+
+.button:hover{
+    background: var(--light-green);
+}
+
+.button.cancel{
+    color: var(--red);
+    border: 2px var(--red) solid;
+    border-radius: 0.25em;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.6;
+}
+
+.button.cancel:hover{
+    opacity: 1;
+}
+
+
 
 footer {
     text-align: center;
     padding: 4rem 0 2rem;
     color: var(--color-Dark);
     opacity: 0.6;
+}
+
+/*Este bloco de código serve para manter visivel apenas para os leitores de tela digitais e esconder os atreibutos dos olhos humanos*/
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
+@media (min-width: 800px) {
+    html {
+        font-size: 87.5%;
+    }
+
+    .balance {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
